# smart-locker-iot

./: README.md  debug_rs485_rx.py  debug_scan.py  docker-compose.postgres.yml  main.py  pyproject.toml  simulate_demo_cabinet.py  test_arduino_serial.py
arduino/locker_controller/: locker_controller.ino
config/: settings.py  test_cabinet_state.json
data/: locker_system.db  test_address_save.db  test_locker_system.db
domain/: enums.py  models.py
hardware/: rpi_locker.py
infracstructure/: cabinet_state.py  config_api.py  database.py  mqtt_client.py  serial_manager.py
services/: discovery_service.py  heartbeat_service.py  locker_service.py  setup_handler.py
tests/: debug_serial.py  mock_backend.py  test_database_logging.py  test_setup_logic.py  verify_flow.py
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: App.jsx  api.js  firebase.js  index.css
ui/src/screens/: AdminScreen.jsx  KioskScreen.jsx
utils/: logger.py
